--- a/packages/core.yaml
+++ b/packages/core.yaml
@@ -7,7 +7,7 @@ external_components:
   - source:
       url: https://github.com/Maximusikk/RoyalClimaAcCore.git
       type: git
-      ref: master
+      ref: main
     components: [ tclac ]
     refresh: 30s
 
